# C_Camera_Streamer

./: CMakeLists.txt  camera_test.py  client.py
include/: CameraStreamer.hpp
src/: CameraStreamer.cpp  main.cpp
